<resources>
    <string name="app_name">Stockbit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="watchlist">Watchlist</string>
    <string name="stream">Stream</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="porfolio">Porfolio</string>
    <string name="data_not_found">Data not found</string>
    <string name="loginFragment">com.yogi.stockbit.login:id/loginFragment</string>
</resources>