<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_nav_graph"
        android:icon="@drawable/ic_baseline_star_border_24"
        android:title="@string/watchlist" />

    <item
        android:id="@+id/stream_nav_graph"
        android:icon="@drawable/ic_baseline_description_24"
        android:title="@string/stream" />
    <item
        android:id="@+id/search_nav_graph"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/chat_nav_graph"
        android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
        android:title="@string/chat" />
    <item
        android:id="@+id/porfolio_nav_graph"
        android:icon="@drawable/ic_baseline_pie_chart_24"
        android:title="@string/porfolio" />

</menu>